gcc/testsuite/g++.dg/cpp0x/constexpr-static8.C
@@ -1,0 +1,7 @@
+// PR c++/50258
+// { dg-options "-std=c++0x -fpermissive" }
+
+struct Foo {
+  static const double d = 3.14; // { dg-warning "constexpr" }
+};
+const double Foo::d;            // { dg-warning "constexpr" }
